Finish User Management Module
- Add Confirm Branch Page
- Add User Request Page

--- a/Source/Website/DesktopModules/Modules/UserManagement/App_LocalResources/UserDetail.ascx.resx
+++ b/Source/Website/DesktopModules/Modules/UserManagement/App_LocalResources/UserDetail.ascx.resx
@@ -237,4 +237,7 @@
   <data name="lblOldPassword.Text" xml:space="preserve">
     <value>Mật khẩu cũ</value>
   </data>
+  <data name="ViewDetail.Header" xml:space="preserve">
+    <value>#</value>
+  </data>
 </root>
