Apply Telerik Controls
- Apply RadCombobox, RadGrid to Master Data, Dynamic Report, Module
Management, Cache Management
- Add Encrypt web.config command files

--- a/Source/Website/DesktopModules/Modules/CacheManagement/App_LocalResources/CacheInquiry.ascx.resx
+++ b/Source/Website/DesktopModules/Modules/CacheManagement/App_LocalResources/CacheInquiry.ascx.resx
@@ -127,6 +127,6 @@
     <value>Please enter your fiter keyword.</value>
   </data>
   <data name="TypeHint.Text" xml:space="preserve">
-    <value>Please select a type</value>
+    <value>Please select a cache type</value>
   </data>
 </root>
