--- a/Source/Website/admin/Security/App_LocalResources/PasswordReset.ascx.resx
+++ b/Source/Website/admin/Security/App_LocalResources/PasswordReset.ascx.resx
@@ -118,22 +118,22 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Password.Required" xml:space="preserve">
-    <value>You must provide a valid password.</value>
+    <value>Mật khẩu bạn cung cấp không hợp lệ.</value>
   </data>
   <data name="Confirm.Required" xml:space="preserve">
-    <value>You must provide a password confirmation.</value>
+    <value />
   </data>
   <data name="Confirm.Text" xml:space="preserve">
-    <value>Confirm Password</value>
+    <value>Xác nhận Mật khẩu</value>
   </data>
   <data name="cmdChangePassword.Text" xml:space="preserve">
-    <value>Change Password</value>
+    <value>Đổi Mật Khẩu</value>
   </data>
   <data name="FailedAttempt.Text" xml:space="preserve">
-    <value>Failed to reset password. Either the user name/token combination is invalid, or the token has expired.</value>
+    <value>Không thể đặt lại mật khẩu. Tên đăng nhập hoặc token không hợp lệ, hoặc token đã hết hạn.</value>
   </data>
   <data name="Password.Text" xml:space="preserve">
-    <value>New Password</value>
+    <value>Mật khẩu mới</value>
   </data>
   <data name="SuccesfulAttempt.Text" xml:space="preserve">
     <value>The user account has had their password updated.</value>
@@ -154,10 +154,10 @@
     <value>E-Mail Address</value>
   </data>
   <data name="ForcedResetInfo.Text" xml:space="preserve">
-    <value>Your password needs to be changed before you can login into your account. A password reset link has been sent to your email address which will allow you to create a new password.</value>
+    <value>Bạn cần phải thay đổi mật khẩu trước khi đăng nhập vào hệ thống.</value>
   </data>
   <data name="ChangeSuccessful.Text" xml:space="preserve">
-    <value>Password Changed Successfully</value>
+    <value>Đổi Mật khẩu thành công.</value>
   </data>
   <data name="Answer.Text" xml:space="preserve">
     <value>Answer</value>
@@ -166,6 +166,6 @@
     <value>You must provide the security answer.</value>
   </data>
   <data name="ResetLinkExpired.Text" xml:space="preserve">
-    <value>The password reset link has expired and is no longer valid.</value>
+    <value>Link đặt lại mật khẩu đã hết hạn và không còn hiệu lực.</value>
   </data>
 </root>
