--- a/Source/Website/admin/Security/App_LocalResources/SendPassword.ascx.resx
+++ b/Source/Website/admin/Security/App_LocalResources/SendPassword.ascx.resx
@@ -130,18 +130,16 @@
     <value>Enter your verification code.</value>
   </data>
   <data name="LoginFailed.Text" xml:space="preserve">
-    <!--<value>Login Failed.  Please remember that passwords are case sensitive.</value>-->
-    <value>Đăng nhập thất bại. Lưu ý: &lt;b&gt;Mật Khẩu&lt;/b&gt; có phân biệt giữa chữ hoa và chữ thường.</value>
+    <value>Đăng nhập thất bại. Tên đăng nhập hoặc Mật khẩu không chính xác. &lt;br&gt;Lưu ý: &lt;b&gt;Mật Khẩu&lt;/b&gt; có phân biệt giữa chữ hoa và chữ thường.</value>
   </data>
   <data name="UserLockedOut.Text" xml:space="preserve">
-    <!--<value>This account has been locked out after too many unsuccessful login attempts.  Please wait 10 minutes before trying to login again.  If you have forgotten your password, please try the Password Reminder option before contacting an Administrator.</value>-->
     <value>
         Tài khoản này đang tạm khóa do đăng nhập sai nhiều lần liên tiếp. 
         Vui lòng đăng nhập lại sau {0} phút hoặc liên hệ cấp quản lý để được hỗ trợ mở khoá nhanh.
     </value>
   </data>
   <data name="PasswordSent.Text" xml:space="preserve">
-    <value>If the details entered were correct, you should receive an email message shortly with a link to reset your password.</value>
+    <value>Vui lòng kiểm tra email, bạn sẽ nhận được một email chứa link để đặt lại Mật khẩu của bạn.</value>
   </data>
   <data name="EnterUsername.Text" xml:space="preserve">
     <value>Enter your user name.</value>
@@ -150,19 +148,19 @@
     <value>Reset Password</value>
   </data>
   <data name="plCaptcha.Text" xml:space="preserve">
-    <value>Security Code</value>
+    <value>Mã kiểm tra</value>
   </data>
   <data name="plCaptcha.Help" xml:space="preserve">
-    <value>Enter the security code.</value>
+    <value>Nhập Mã kiểm tra</value>
   </data>
   <data name="PasswordRetrievalDisabled.Text" xml:space="preserve">
     <value>Password retrieval is disabled on this site.  Please contact the Administrator for assistance in retrieving your account details.</value>
   </data>
   <data name="CaptchaText.Text" xml:space="preserve">
-    <value>Enter the code shown above in the box below.</value>
+    <value>Vui lòng nhập mã kiểm tra ở trên vào ô bên dưới.</value>
   </data>
   <data name="InvalidCaptcha.Text" xml:space="preserve">
-    <value>Incorrect Security Code</value>
+    <value>Mã kiểm tra không chính xác.</value>
   </data>
   <data name="plQuestion.Text" xml:space="preserve">
     <value>Password Question:</value>
@@ -177,10 +175,10 @@
     <value>Enter the answer to your password question.</value>
   </data>
   <data name="plEmail.Help" xml:space="preserve">
-    <value>Enter the email address provided during registration to retrieve your password.</value>
+    <value>Nhập địa chỉ email mà bạn đã đăng ký Tài khoản để nhận lại Mật khẩu.</value>
   </data>
   <data name="plEmail.Text" xml:space="preserve">
-    <value>Email Address:</value>
+    <value>Tên đăng nhập</value>
   </data>
   <data name="EnterUsernameEmail.Text" xml:space="preserve">
     <value>Enter your user name or the email address provided during registration.</value>
@@ -213,22 +211,21 @@
     <value>Mail failed to send. SMTP not configured.</value>
   </data>
   <data name="hlLogin.Text" xml:space="preserve">
-    <value>Cancel</value>
+    <value>Hủy</value>
   </data>
   <data name="ResetTokenHelp.Text" xml:space="preserve">
-    <!--<value>If you forgot your password an email with a password reset link will be sent to you. Click on the link in that email and you will be taken to a page where you can then create a new password.</value>-->
     <value>
         Trong trường hợp bạn quên mật khẩu, chúng tôi sẽ gửi tới hộp thư mà bạn đã đăng ký một email dùng để cài đặt lại mật khẩu.
         Vui lòng nhấp vào liên kết trong email và làm theo hướng dẫn để đặt lại một mật khẩu mới.
     </value>
   </data>
   <data name="ResetToken.Text" xml:space="preserve">
-    <value>Send Reset Link</value>
+    <value>Gửi Yêu Cầu</value>
   </data>
   <data name="EmailNotFound.Text" xml:space="preserve">
     <value>We could not find an account with that email address. Please try again.</value>
   </data>
   <data name="cmdClose.Text" xml:space="preserve">
-    <value>Close</value>
+    <value>Đóng</value>
   </data>
 </root>
