--- a/Source/Website/AppGlobalResources/GlobalResources.resx
+++ b/Source/Website/AppGlobalResources/GlobalResources.resx
@@ -645,21 +645,21 @@ Thank you, we appreciate your support...
     <value>[Portal:PortalName] Password Reminder</value>
   </data>
   <data name="EMAIL_PASSWORD_REMINDER_BODY.Text" xml:space="preserve">
-    <value>Dear [User:DisplayName],
+    <value>Xin chào [User:DisplayName],
 
-You have requested a Password Reset Token from [Portal:PortalName].
+Bạn vừa yêu cầu đặt lại mật khẩu tại website [Portal:PortalName].
 
-Please login using the following information:
+Vui lòng đăng nhập với thông tin bên dưới:
 
-Website Address: [Portal:URL]
-Username:   [User:Username]
+Địa chỉ Website: [Portal:URL]
+Tên đăng nhập:   [User:Username]
 
-Link to reset password: http://[Portal:URL]/default.aspx?ctl=PasswordReset&amp;resetToken=[Membership:PasswordResetToken]
+Link để đặt lại Mật khẩu: http://[Portal:URL]/default.aspx?ctl=PasswordReset&amp;resetToken=[Membership:PasswordResetToken]
 
-Sincerely,
+Trân trọng,
 [Portal:PortalName]
 
-*Note: If you did not request a Password Reset Token, please disregard this Message.
+*Ghi chú: Nếu bạn không phải là người yêu cầu đặt lại mật khẩu, vui lòng bỏ qua email này.
 </value>
   </data>
   <data name="EMAIL_PROFILE_UPDATED_SUBJECT.Text" xml:space="preserve">
