--- a/Source/Website/admin/Security/App_LocalResources/AccessDenied.ascx.resx
+++ b/Source/Website/admin/Security/App_LocalResources/AccessDenied.ascx.resx
@@ -118,9 +118,11 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="AccessDenied.Text" xml:space="preserve">
-    <value>Either you are not currently logged in, or you do not have access to this content.</value>
+    <!--<value>Either you are not currently logged in, or you do not have access to this content.</value>-->
+    <value>Bạn chưa đăng nhập vào hệ thống hoặc do bạn không có quyền truy cập vào nội dung này.</value>
   </data>
   <data name="ControlTitle_access denied.Text" xml:space="preserve">
-    <value>Access Denied</value>
+    <!--<value>Access Denied</value>-->
+    <value>Bạn không có quyền truy cập vào nội dung này.</value>
   </data>
 </root>
